--- a/index.html
+++ b/index.html
@@ -8,32 +8,39 @@
 
 	<body>
 		<h3>Stats</h3>
-		<span id="party"></span> | 
-		<span id="money"></span> | 
-		<span id="clout"></span>
-		
-		<h3>Party Supplies</h3>
-		<span id="balloon"></span> <button onclick="buyBalloon()" id="balloonUpgrade">Buy ($0.25)</button></br>
-		<span id="beer"></span> <button onclick="buyBeer()" id="beerUpgrade">Buy ($4)</button></br>
-		<span id="hardAlcohol"></span> <button onclick="buyHardAlcohol()" id="hardAlcoholUpgrade">Buy ($12)</button></br>
-		<span id="beerPongTable"></span> <button onclick="buyBeerPongTable()" id="beerPongTableUpgrade">Buy ($50)</button></br>
-		<span id="keg"></span> <button onclick="buyKeg()" id="kegUpgrade">Buy ($100)</button></br>
-		<span id="speaker"></span> <button onclick="buySpeaker()" id="speakerUpgrade">Buy ($300)</button>
+		<span id="party"></span> || 
+		<span id="money"></span> || 
+		<span id="clout"></span></br>
+		<span id="doorFee"></span>
+		<button onclick="doorFee(1)">+$1</button>
+		<button onclick="doorFee(-1)" id="doorFeeDown">-$1</button>
 		
 		<h3>Actions</h3>
-		<button onclick="invite()">Invite Someone</button>
+		<button onclick="digForChange()">Dig for Change</button>
+		<button onclick="kickSomeoneOut()" id="kickSomeoneOut">Kick Someone Out</button>
+		
+		<h3>Supplies</h3>
+		<!-- <span id="balloon"></span> <button onclick="" id="balloonUpgrade"></button></br> -->
+		
+		<h3>Alcohol</h3>
+		
+		<h3>Venues</h3>
+		
+		<h3>Promotions</h3>
+		<button onclick="invite()">Send a Text (Free)</button>
 
 		<h3>Text Messages</h3>
-		<div id="consoleBox">
-			<ul id="console"></ul>
-		</div>
+		<div id="textMessageBox"><ul id="textMessages"></ul></div>
+		
+		<h3>FaceSpace</h3>
+		<div id="faceSpaceBox"><ul id="faceSpaceFeed"></ul></div>
 		
 		<h3>Game Data</h3>
 		<button onclick="saveGame()">Save Game</button>
 		<button onclick="loadGame()">Load Game</button>
 		<button onclick="deleteSave()">Delete Save</button>
 		
-		<p>Copyright 2019 - Ver. alpha 0.2</p>
+		<p>Copyright 2019 - Ver. alpha 1.1</p>
 		
 		<script src="chance.js" charset="utf-8" type="text/javascript"></script>
 		<script src="dialogue.js" charset="utf-8" type="text/javascript"></script>		
