--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="styles/styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 		<title>Party Universe</title>
 	</head>
 
 	<body>
+		<h1>Party Universe</h1>
+		
 		<h3>Stats</h3>
 		<span id="party"></span>, 
 		<span id="money"></span>, 
@@ -18,17 +20,20 @@
 		
 		<h3>Actions</h3>
 		<button onclick="digForChange()">Dig for Change</button>
+		<button onclick="sendAText()" id="sendAText">Send a Text ($0.25)</button>
 		<button onclick="kickSomeoneOut()" id="kickSomeoneOut">Kick Someone Out</button>
 		
 		<h3>Supplies</h3>
-		<!-- <span id="balloon"></span> <button onclick="" id="balloonUpgrade"></button></br> -->
+		<div id="suppliesList"></div>
 		
 		<h3>Alcohol</h3>
-		
-		<h3>Venues</h3>
+		<div id="alcoholList"></div>
 		
 		<h3>Promotions</h3>
-		<button onclick="sendAText()" id="sendAText">Send a Text ($0.25)</button>
+		<div id="promotionsList"></div>
+		
+		<h3>Venues</h3>
+		<div id="venuesList"></div>
 
 		<h3>Phone</h3>
 		<div id="textMessageBox">
@@ -53,12 +58,13 @@
 		<button onclick="getHiddenStatsInConsole()">DEBUG: Hidden Stats in Console</button>
 		
 		<p>Since this is the alpha version, expect save files to break. If the game is buggy, try deleting your save.</p>
-		<p>Copyright 2019 - Ver. alpha 1.3</p>
+		<p>Copyright 2019 - Ver. alpha 1.4</p>
 		
-		<script src="chance.js" charset="utf-8" type="text/javascript"></script>
-		<script src="gameInfo.js" charset="utf-8" type="text/javascript"></script>
-		<script src="gameData.js" charset="utf-8" type="text/javascript"></script>
-		<script src="dialogue.js" charset="utf-8" type="text/javascript"></script>		
-		<script src="main.js" charset="utf-8" type="text/javascript"></script>
+		<script src="scripts/chance.js" charset="utf-8" type="text/javascript"></script>
+		<script src="scripts/gameInfo.js" charset="utf-8" type="text/javascript"></script>
+		<script src="scripts/gameData.js" charset="utf-8" type="text/javascript"></script>
+		<script src="scripts/randomEvents.js" charset="utf-8" type="text/javascript"></script>
+		<script src="scripts/dialogue.js" charset="utf-8" type="text/javascript"></script>
+		<script src="scripts/main.js" charset="utf-8" type="text/javascript"></script>
 	</body>
 </html>
